--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,7 @@ language: go
 go:
   - "1.12.x"
 
-matrix:
-  include:
-    - go: "1.10.x"
-      script:  go test -v ./...
-    - go: "1.11.x"
-      script: go test -v -mod=vendor ./...
+install: true
 
 env:
   - GO111MODULE=on
