fixed two of the three tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: go
 go:
   - "1.12.x"
-install: true
+install:
+  -
 script:
+  - go get -t -v ./...
   - diff -u <(echo -n) <(gofmt -d -s .)
   - go vet .
   - go test -v -race ./...
 env:
   - GO111MODULE=on
+
+
+
